hphp/hack/test/typecheck/generic_incompatible_implementation2.php.exp
File "generic_incompatible_implementation2.php", line 6, characters 19-19:
Member f has the wrong type (Typing[4341])
File "generic_incompatible_implementation2.php", line 6, characters 26-28:
Some type constraint(s) are violated here
File "generic_incompatible_implementation2.php", line 6, characters 21-21:
T is a constrained type parameter
File "generic_incompatible_implementation2.php", line 6, characters 26-28:
Expected num
File "generic_incompatible_implementation2.php", line 6, characters 21-21:
But got T
